# 0.00.09 (63501) Apr 16, 2012
4/16/12 make pickers show abs value, put signs outside pickers
4/16/12 delete convenience pickers for rise and run
# 0.00.08 (63479) Apr 16, 2012
4/16/12 version of interactive equation that uses number pickers instead of spinners
4/16/12 add "barrel" shapes to number pickers
4/16/12 bug fix for SpinnerButtonNode, inherited from fractions
4/16/12 intermediate, crude version of AP's number picker
4/16/12 scale point tool image to eliminate scaling in PointTooNode
# 0.00.07 (63437) Apr 16, 2012
4/16/12 use grayscale image for point tool, until we work out colors of other things
4/16/12 highlight the point tool using the color of the line that the tool is on
4/16/12 use a more subdued color for point tool image
4/16/12 improve visibility of minus sign in graphed equations by aligning it with slope numerator
4/16/12 try yellow for highlight on point tool, but it conflicts with yellow used elsewhere for intercept
4/16/12 revert to spinner buttons on right, above/below was deemed to be ugly with poor usability
4/12/12 delete "interviews" study version from build.properties, it's premature
# 0.00.06 (63392) Apr 12, 2012
4/12/12 try spinner buttons above/below numbers, buttons side-by-side
# 0.00.05 (63387) Apr 12, 2012
4/12/12 tweak initial location of point tools
4/12/12 tweak the layout of spinner-based interactive equation
4/12/12 set correct sign (+,-) for intercept in interactive equation
4/12/12 adjust for minus sign when centering values in spinner
4/12/12 center value in spinner
4/12/12 don't allow slope and intercept to overlap, snap rise towards the origin (above or below intercept)
4/12/12 shrink the grid a bit, so that there's a margin around it for rise/run brackets
4/12/12 dynamically enable/disable the spinner buttons as the range changes
4/12/12 common color for all canvases
4/12/12 move non-app classes to linegraphing.common
4/12/12 rename packages for tabs 1 & 3
4/12/12 rename top-level classes for tabs 1 & 3